# aftermark

./: README.md  nuke.py  pyproject.toml  requirements.txt
aftermark/cli/: nuke.py
artifacts/logs/: lsb_lab  nuke
jpg/: YCbCr.py  dct_decode_majority.py  dct_decode_or.py  dct_decode_single.py  dct_embed.py  dct_embed_single.py  freq_heatmap.py  freq_heatmap_diff.py  jpeg_gonewild.py  parity.py  pixel_shifting.py  pretty_qtable.py  show_qtable.py  subplot_mx.py  theme.py
lsb/: bit_planes.py  entro_checker.py  lsb_decode_R.py  lsb_decode_diff.py  lsb_embed_R.py  lsb_embed_diff.py
lsb_lab/: bit_planes.sh  json2bit.py  lsb_decode.py  lsb_decode_R.py  lsb_decode_diff.py  lsb_embed.py  lsb_embed_R.py  lsb_embed_diff.py  lsb_visible.py  lsb_visualize_R.py
